compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/TwoOverrides.kt
// TwoOverrides
class TwoOverrides : Iterable<String> {
    override fun iterator() = null

    override fun iterator() = null
}
